--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <h1>Naslov</h1>
         <p>Paragraf</p>
         <h4>Podnaslov</h4>
+        <ul>
+            <li>Stavka 1</li>
+            <li>Stavka 2</li>
+            <li>Stavka 3</li>
+        </ul>
     </main>
 </body>
 </html>
